--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"next": "10.0.4",
+		"next-auth": "^3.1.0",
 		"next-seo": "^4.17.0",
 		"react": "17.0.1",
 		"react-calendly": "^1.3.0",
