--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+about.txt
+
 # local env files
 .env.local
 .env.development.local
@@ -31,4 +33,6 @@ yarn-error.log*
 .env.production.local
 
 # vercel
+.vercel
+
 .vercel
