--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"mongodb": "^3.6.3",
 		"next": "10.0.4",
 		"next-auth": "^3.1.0",
+		"next-connect": "^0.9.1",
 		"next-seo": "^4.17.0",
 		"react": "17.0.1",
 		"react-calendly": "^1.3.0",
 		"react-dom": "17.0.1",
-		"styled-components": "^5.2.1"
+		"react-hook-form": "^6.14.1",
+		"styled-components": "^5.2.1",
+		"yup": "^0.32.8"
 	},
 	"devDependencies": {
 		"babel-plugin-styled-components": "^1.12.0"
