--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-calendly": "^1.3.0",
 		"react-dom": "17.0.1",
 		"react-hook-form": "^6.14.1",
+		"react-icons": "^4.2.0",
 		"styled-components": "^5.2.1",
 		"yup": "^0.32.8"
 	},
