--- a/package.json
+++ b/package.json
@@ -21,7 +21,5 @@
 		"sass": "^1.32.11",
 		"yup": "^0.32.8"
 	},
-	"devDependencies": {
-		"babel-plugin-styled-components": "^1.12.0"
-	}
+	"devDependencies": {}
 }
